overflow correct all

--- a/ProjetoEcoCycle/src/app/components/cooperativa/coletas/coletas.css
+++ b/ProjetoEcoCycle/src/app/components/cooperativa/coletas/coletas.css
@@ -20,7 +20,6 @@ body{
 .conteudo{
 
     margin-left:260px;
-    width:calc(100vw - 260px);
 
     min-height:100vh;
 
