--- a/ProjetoEcoCycle/src/app/components/cooperativa/dashboard-cooperativa/dashboard-cooperativa.css
+++ b/ProjetoEcoCycle/src/app/components/cooperativa/dashboard-cooperativa/dashboard-cooperativa.css
@@ -19,7 +19,6 @@
 }
 
 .conteudo {
-  width: calc(100vw - 260px);
   min-height: 100vh;
   margin-left: 260px;
   padding: 28px 32px;
