--- a/ProjetoEcoCycle/src/app/components/gerador/incentivos-fiscais/incentivos-fiscais.css
+++ b/ProjetoEcoCycle/src/app/components/gerador/incentivos-fiscais/incentivos-fiscais.css
@@ -22,8 +22,6 @@ body{
 
     margin-left:260px;
 
-    width:calc(100vw - 260px);
-
     min-height:100vh;
 
     padding: 22px 26px;;
