--- a/ProjetoEcoCycle/src/app/components/gerador/solicitar-coleta/solicitar-coleta.css
+++ b/ProjetoEcoCycle/src/app/components/gerador/solicitar-coleta/solicitar-coleta.css
@@ -15,7 +15,6 @@
 .conteudo{
 
     margin-left:260px;
-    width:calc(100% - 260px);
 
     min-height:100vh;
 
