--- a/ProjetoEcoCycle/src/app/components/recicladora/controle-de-volume/controle-de-volume.css
+++ b/ProjetoEcoCycle/src/app/components/recicladora/controle-de-volume/controle-de-volume.css
@@ -19,7 +19,7 @@ body{
 .conteudo{
 
     margin-left:260px;
-    width:calc(100vw - 260px);
+    
     min-height:100vh;
 
     padding:28px;
